[gd_scene load_steps=18 format=3 uid="uid://cjxqqd6bx4v5e"]

[ext_resource type="Script" uid="uid://b22ylvow5011q" path="res://scenes/questions/questions.gd" id="1_uixsw"]
[ext_resource type="Material" uid="uid://dj573ymvvkvfg" path="res://shaders/whiten_shader_material.tres" id="2_tw0i0"]
[ext_resource type="Texture2D" uid="uid://dsvqgd6a7lijv" path="res://graphics/icons/book-open-cover.svg" id="3_ea8a3"]
[ext_resource type="Theme" uid="uid://b703ndr62kcne" path="res://themes/comf_font.tres" id="4_ygtqm"]
[ext_resource type="StyleBox" uid="uid://c68d545dipf37" path="res://scenes/questions/alt_delete.tres" id="5_6vy7g"]
[ext_resource type="StyleBox" uid="uid://cpywaae1frr6s" path="res://scenes/questions/question_box_text_normal.tres" id="5_dqcot"]
[ext_resource type="Texture2D" uid="uid://bl60dwihfavlw" path="res://graphics/icons/minus.svg" id="6_55nng"]
[ext_resource type="Texture2D" uid="uid://cts7s8dis43d" path="res://graphics/icons/plus.svg" id="7_2j5ug"]

[sub_resource type="Theme" id="Theme_0m3ev"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmske"]
bg_color = Color(0, 0.3795, 0.69, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="InputEventKey" id="InputEventKey_yyh1r"]
device = -1
alt_pressed = true
keycode = 43

[sub_resource type="Shortcut" id="Shortcut_i75uc"]
events = [SubResource("InputEventKey_yyh1r")]

[sub_resource type="InputEventKey" id="InputEventKey_ir0m2"]
device = -1
alt_pressed = true
keycode = 45

[sub_resource type="Shortcut" id="Shortcut_hp2uy"]
events = [SubResource("InputEventKey_ir0m2")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yk01e"]
bg_color = Color(0, 0.380392, 0.690196, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
anti_aliasing = false

[sub_resource type="InputEventKey" id="InputEventKey_0c3wx"]
device = -1
ctrl_pressed = true
keycode = 43

[sub_resource type="Shortcut" id="Shortcut_acjd7"]
events = [SubResource("InputEventKey_0c3wx")]

[node name="Questions" type="HBoxContainer" groups=["question_box"]]
theme = SubResource("Theme_0m3ev")
theme_override_constants/separation = 0
script = ExtResource("1_uixsw")

[node name="AddAlt" type="Button" parent="." node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
shortcut_context = NodePath("..")
theme_override_styles/normal = SubResource("StyleBoxFlat_jmske")
shortcut = SubResource("Shortcut_i75uc")

[node name="M" type="MarginContainer" parent="AddAlt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Icon" type="TextureRect" parent="AddAlt/M"]
material = ExtResource("2_tw0i0")
layout_mode = 2
texture = ExtResource("3_ea8a3")
expand_mode = 1

[node name="Editables" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="MainElement" type="HBoxContainer" parent="Editables"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Text" type="TextEdit" parent="Editables/MainElement" groups=["question"]]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_ygtqm")
theme_override_colors/font_placeholder_color = Color(0, 0.38, 0.69, 0.567)
theme_override_colors/font_color = Color(2.64719e-07, 0.162824, 0.239937, 1)
theme_override_styles/normal = ExtResource("5_dqcot")
placeholder_text = "What will be the question?"
wrap_mode = 1
scroll_fit_content_height = true

[node name="Delete" type="Button" parent="Editables/MainElement" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
shortcut_context = NodePath("../Text")
theme_override_styles/normal = ExtResource("5_6vy7g")
shortcut = SubResource("Shortcut_hp2uy")

[node name="M" type="MarginContainer" parent="Editables/MainElement/Delete"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="Icon" type="TextureRect" parent="Editables/MainElement/Delete/M"]
material = ExtResource("2_tw0i0")
layout_mode = 2
texture = ExtResource("6_55nng")
expand_mode = 1

[node name="Alternatives" type="VBoxContainer" parent="Editables"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AddSiblingQuestion" type="Button" parent="." node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
shortcut_context = NodePath("..")
theme_override_styles/normal = SubResource("StyleBoxFlat_yk01e")
shortcut = SubResource("Shortcut_acjd7")

[node name="M" type="MarginContainer" parent="AddSiblingQuestion"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="Icon" type="TextureRect" parent="AddSiblingQuestion/M"]
material = ExtResource("2_tw0i0")
layout_mode = 2
texture = ExtResource("7_2j5ug")
expand_mode = 1

[connection signal="pressed" from="AddAlt" to="." method="_on_alt_button_pressed"]
[connection signal="pressed" from="Editables/MainElement/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="AddSiblingQuestion" to="." method="_on_add_sibling_pressed"]
